--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <title>Salary Calculator</title>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="client.js"></script>
+    <!-- <link rel="stylesheet" href="bootstrap.css" /> -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="bootstrap.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      Add Employee
+      <h1>
+        Employee
+        <h2>
+          <input id="firstName" placeholder="First Name" type="text" />
+          <input id="lastName" placeholder="Last Name" type="text" />
+          <input id="idNumber" placeholder="ID" type="text" />
+          <input id="title" placeholder="Title" type="text" />
+          <input id="annualSalary" placeholder="Annual Salary" type="text" />
+          <button id="submitEmployee">Submit</button>
+        </h2>
+      </h1>
+    </header>
+  </body>
 </html>
