--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
       Add Employee
       <h1>
         Employee
-        <h2>
-          <input id="firstName" placeholder="First Name" type="text" />
-          <input id="lastName" placeholder="Last Name" type="text" />
-          <input id="idNumber" placeholder="ID" type="text" />
-          <input id="title" placeholder="Title" type="text" />
-          <input id="annualSalary" placeholder="Annual Salary" type="text" />
-          <button id="submitEmployee">Submit</button>
-        </h2>
+        <div id="employeeInDiv">
+          <h2>
+            <input id="firstName" placeholder="First Name" type="text" />
+            <input id="lastName" placeholder="Last Name" type="text" />
+            <input id="idNumber" placeholder="ID" type="text" />
+            <input id="title" placeholder="Title" type="text" />
+            <input id="annualSalary" placeholder="Annual Salary" type="text" />
+            <button id="submitEmployee">Submit</button>
+          </h2>
+        </div>
       </h1>
     </header>
   </body>
