appended inputs to DOM

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Salary Calculator</title>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="client.js"></script>
-    <!-- <link rel="stylesheet" href="bootstrap.css" /> -->
+    <link rel="stylesheet" href="bootstrap.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -25,6 +25,10 @@
           </h2>
         </div>
       </h1>
+      <div id="displayEmployeesDiv">
+        <h1>Display Empoyees</h1>
+        <ul id="employeeObject"></ul>
+      </div>
     </header>
   </body>
 </html>
