aligned some text in CSS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>
-        Employee
+        Salary Calculator
         <div id="employeeInDiv">
           <h2>
             <input id="firstName" placeholder="First Name" type="text" />
